# bivouac.tv

./: .gitignore  Makefile  README.md  bivouac-specs.md  docker-compose.yml  synopsis-a-verifier.md
api/: .env.example  README.md  pyproject.toml
api/apps/documentaries/: __init__.py  admin.py  apps.py  filters.py  models.py  serializers.py  urls.py  views.py
api/apps/documentaries/management/commands/: autotag_ai.py  autotag_tmdb.py  download_posters.py  enrich_tmdb.py  enrich_web.py  import_fifav.py  scrape_availability.py  scrape_availability_full.py  seed_taxonomies.py  translate_synopses.py
api/apps/documentaries/migrations/: 0001_initial.py  0002_initial.py  0003_add_synopsis_i18n.py  0004_add_i18n_names.py  0005_watched.py  0006_add_favorite_model.py  0007_french_only.py
api/apps/notifications/: admin.py  models.py  serializers.py  signals.py  views.py
api/apps/notifications/migrations/: 0001_initial.py  0002_notification_status_and_more.py  0003_add_documentary_denormalized_fields.py  0004_backfill_documentary_info.py
api/apps/reviews/: admin.py  models.py  serializers.py  urls.py  views.py
api/apps/reviews/migrations/: 0001_initial.py  0002_initial.py
api/apps/submissions/: __init__.py  admin.py  models.py  serializers.py  urls.py  views.py
api/apps/submissions/migrations/: 0001_initial.py  0002_initial.py  0003_linkreport_linksuggestion.py  0004_fix_linkreport_availability_nullable.py  0005_add_linkreport_denormalized_fields.py
api/apps/users/: admin.py  models.py  serializers.py  urls.py  views.py
api/apps/users/migrations/: 0001_initial.py
api/config/: asgi.py  urls.py  wsgi.py
api/config/settings/: __init__.py  base.py  development.py  production.py  test.py
web/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
web/src/: App.vue  main.ts
web/src/assets/: main.css
web/src/components/common/: PlatformIcon.vue  StarRating.vue
web/src/components/docs/: DocCard.vue  DocSlider.vue  LinkReportModal.vue  LinkSuggestionModal.vue  ReviewForm.vue  ReviewList.vue
web/src/components/layout/: AppFooter.vue  AppHeader.vue
web/src/composables/: useLocalePath.ts  useLocalizedName.ts
web/src/i18n/: index.ts
web/src/i18n/locales/: en.json  fr.json
web/src/layouts/: LangLayout.vue
web/src/pages/: Admin.vue  Browse.vue  DocDetail.vue  Favorites.vue  Home.vue  NotFound.vue  Notifications.vue  Profile.vue  Submit.vue  Watched.vue  Watchlist.vue
web/src/pages/auth/: Login.vue  Register.vue
web/src/router/: index.ts
web/src/services/: api.ts
web/src/stores/: auth.ts  documentaries.ts  notifications.ts
web/src/types/: index.ts
